# total_labeler

./: .gitignore  LICENSE  README.md  analyze_labels.py  labeler_gui.py  plan.md  pyproject.toml  pyproject.toml.backup  requirements.txt  test_labeler.py
Algo_results/: analysis.ipynb  property_mappings.json
Annotations/DEMO/: demo_3.json
Annotations/TESTSET/10/: 10_1.json  10_2.json  10_3.json  10_4.json  10_5.json  10_6.json  10_7.json
Annotations/TESTSET/11/: 11_1-2.json  11_4-1.json  11_4-2.json  11_4-3.json  11_7-1.json  11_7-2.json  11_7-3.json
Annotations/TESTSET/11/1-1최호승/: labels.json
Annotations/TESTSET/11/1-3최호승/: labels.json
Annotations/TESTSET/5/: 5_0.json
Annotations/TESTSET/7/: 7_1.json  7_2.json  7_3.json  7_4.json  7_5.json  7_6.json  7_7.json
